# SqliteWrap

./: CMakeLists.txt  README.md  SqliteWrap_global.h  sqlite3.h  sqlitewrap.cpp  sqlitewrap.h
example/: example.cpp
